# stm-golf

./: .gitignore  LICENSE  README.md
cubemx/blink/: .mxproject  CMakeLists.txt  blink.ioc  stm32g431cbux_flash.ld
cubemx/blink/Core/Inc/: main.h  stm32g4xx_hal_conf.h
cubemx/blink/Core/Src/: main.c
cubemx/blink/cmake/stm32cubemx/: CMakeLists.txt
custom/blink/: .mxproject  CMakeLists.txt  startup_stm32g431xx.s  stm32g431cbux_flash.ld
custom/blink/Core/Inc/: core_cm4.h  stm32g431xx.h
custom/blink/Core/Src/: main.c
custom/blink/cmake/stm32cubemx/: CMakeLists.txt
rust/blink/: Cargo.toml  openocd.gdb
rust/blink/examples/: hello.rs
rust/blink/src/: main.rs
